# fastapi-auth

./: .gitignore  README.md  pyproject.toml
backauth/: __init__.py
backauth/auth/: router.py  schemas.py
backauth/auth/model/: token.py
backauth/auth/repository/: tokenrepository.py
backauth/auth/service/: __init__.py  auth_service.py  discord.py  github.py  google.py  token_service.py
backauth/config/: setting.py
backauth/error/: exception.py
backauth/user/: model.py  repository.py  router.py  schema.py  service.py
