[project]
name = "backauth"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan",email = "ivanbozhkod@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "backauth"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
alembic = "^1.16.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
asyncpg = "^0.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"


[mypy]
strict = true
ignore_missing_imports = true
follow_imports = "skip"

